# OmniRAG-Engine

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
faiss_store/: faiss.index  metadata.pkl
notebook/: document-Krish.ipynb  document.ipynb  pdf_loader-Krish.ipynb  pdf_loader.ipynb
src/: data_loader.py  embedding.py  search.py  vectorstore.py
