[project]
name = "projectrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "pymupdf>=1.27.0",
    "pypdf>=6.0.0",
    "unstructured>=0.6.7",
    "openpyxl>=3.1.0",
    "msoffcrypto-tool>=6.0.0",
    "sentence-transformers>=5.5.1",
    "chromadb>=1.5.9",
    "numpy>=2.4.6",
    "faiss-cpu>=1.1.4"
]
